@@ -1450,13 +1450,13 @@
   defined.</P>
 <P>Syntax:</P>
 <P><font face="Courier New, Courier, mono">List [length &lt;value&gt;] [columns 
-  &lt;value&gt;] Issue [&lt;issue_constraint&gt;]<br>
+  &lt;value&gt;] Issue [&lt;issue_constraint&gt;] [order &lt;order_condition&gt;]<br>
 list of instructions
   </font><i><br>
   </i><font face="Courier New, Courier, mono">[ForEmptyList [list of instructions]]<br>
   EndList [Issue]</font></P>
 <P>where</P>
-<P><font face="Courier New, Courier, mono">&lt;issue_constraint&gt; = number is|not|greater|smaller 
+<P><font face="Courier New, Courier, mono">&lt;issue_constraint&gt; = number is|not|greater|smaller
   &lt;value&gt;<br>
   | name is|not &lt;value&gt;<br>
   | &lt;date_constraint&gt;</font></P>
@@ -1469,12 +1469,14 @@ list of instructions
   |hour is|not|greater|smaller <br>
   |min is|not|greater|smaller <br>
   |sec is|not|greater|smaller</font></P>
-<P>where year stands for year, mon_nr for month number (1..12), mday for month 
-  day (1..31), yday for year day (1..365), wday for week day (1..7), hour for hour, 
+<P><font face="Courier New, Courier, mono">&lt;order_condition&gt;=bydate desc|asc<br>
+  |bynumber desc|asc</font></P>
+<P>where year stands for year, mon_nr for month number (1..12), mday for month
+  day (1..31), yday for year day (1..365), wday for week day (1..7), hour for hour,
   min for minute and sec for second.</P>
 <P>Any parameter used in &lt;issue_constraint&gt; list can only be used once.</P>
-<P>Inside the List, the parameter context is defined by the constraints applied 
-  to the current issue for every processed line. The parameter context is restored 
+<P>Inside the List, the parameter context is defined by the constraints applied
+  to the current issue for every processed line. The parameter context is restored
   after the list processing.</P>
 <P>Constraints:</P>
 <P>The list of forbidden statements inside List Issue:</P>
@@ -1488,24 +1490,24 @@ list of instructions
 Subtittle, List SearchResults statements.</p>
 <P>3.9.1.7 <b>List of Sections<a name="3.9.1.7"></a></b></P>
 <P>Purpose:</P>
-<P>Select the list of sections according to the given constraints and current 
-  environmental parameters. The Publication, Language, Issue, Section parameters 
-  may not be defined outside List Section statement; inside the statement however, 
+<P>Select the list of sections according to the given constraints and current
+  environmental parameters. The Publication, Language, Issue, Section parameters
+  may not be defined outside List Section statement; inside the statement however,
   all these parameters are defined.</P>
 <P>Syntax:</P>
-<P><font face="Courier New, Courier, mono">List [length &lt;value&gt;] [column 
+<P><font face="Courier New, Courier, mono">List [length &lt;value&gt;] [column
   &lt;value&gt;] Section [&lt;section_constraint&gt;]</font><br>
 <font face="Courier New, Courier, mono">list of instructions</font>
   <i><br>
   </i><font face="Courier New, Courier, mono">[ForEmptyList [list of instructions]]<br>
   EndList [Section]</font></P>
 <P>where</P>
-<P><font face="Courier New, Courier, mono">&lt;section_constraint&gt; = name is|not 
+<P><font face="Courier New, Courier, mono">&lt;section_constraint&gt; = name is|not
   &lt;section_name&gt;<br>
   | number is|not|greater|smaller &lt;section_number&gt;</font></P>
 <P>Any parameter used in section_constraint list can only be used once.</P>
-<P>Inside the List, the data context is defined by the constraints applied to 
-  the current section for every processed line. The data context is restored after 
+<P>Inside the List, the data context is defined by the constraints applied to
+  the current section for every processed line. The data context is restored after
   the list processing.</P>
 <P>Constraints:</P>
 <P>The list of forbidden statements inside List Issue:</P>
@@ -1524,22 +1526,22 @@ Section statement cannot be used inside List Article, List Subtitle, List
 SearchResult statements.</span></p>
 <P>3.9.1.8 <b>List of Articles<a name="3.9.1.8"></a></b></P>
 <P>Purpose:</P>
-<P>Select the list of articles according to the given constraints and current 
-  environmental parameters. The Publication, Language, Issue, Section, Article 
-  parameters may not be defined outside List Article statement; inside the statement 
+<P>Select the list of articles according to the given constraints and current
+  environmental parameters. The Publication, Language, Issue, Section, Article
+  parameters may not be defined outside List Article statement; inside the statement
   however, all these parameters are defined.</P>
 <P>Syntax:</P>
-<P><font face="Courier New, Courier, mono">List [length &lt;value&gt;] [column 
+<P><font face="Courier New, Courier, mono">List [length &lt;value&gt;] [column
   &lt;value&gt;] Article [&lt;article_constraint&gt;] [&lt;article_type_constraint&gt;]<br>
   [order &lt;order_condition&gt;]</font><br>
   <i>list of instructions<br>
   </i><font face="Courier New, Courier, mono">[ForEmptyList [list of instructions]]<br>
   EndList [Article]</font></P>
 <P>where</P>
-<P><font face="Courier New, Courier, mono">&lt;article_type_constraint&gt;=type 
+<P><font face="Courier New, Courier, mono">&lt;article_type_constraint&gt;=type
   is|not &lt;value&gt;</font></P>
 <P>and</P>
-<P><font face="Courier New, Courier, mono">&lt;article_constraint&gt;=name is|not 
+<P><font face="Courier New, Courier, mono">&lt;article_constraint&gt;=name is|not
   &lt;value&gt;<br>
   |number is|not|greater|smaller &lt;value&gt;<br>
   |keyword &lt;value&gt;<br>
@@ -1547,8 +1549,8 @@ SearchResult statements.</span></p>
 <P>and</P>
 <P><font face="Courier New, Courier, mono">&lt;order_condition&gt;=bydate desc|asc<br>
   |bynumber desc|asc</font></P>
-<P>Inside the List, the data context is defined by the constraints applied to 
-  the current article for every processed line. The data context is restored after 
+<P>Inside the List, the data context is defined by the constraints applied to
+  the current article for every processed line. The data context is restored after
   the list processing.</P>
 <P>Constraints:</P>
 <P>The list of forbidden statements inside List Issue:</P>
@@ -1569,22 +1571,22 @@ Article statement cannot be used inside List Subtitle, List SearchResult
 statements.</span></p>
 <P>3.9.1.9 <b>List of Subtitles<a name="3.9.1.9"></a></b></P>
 <P>Purpose:</P>
-<P>Select the list of subtitles according to the given constraints and current 
-  environmental parameters. The article if not specified somewhere else, is treated 
+<P>Select the list of subtitles according to the given constraints and current
+  environmental parameters. The article if not specified somewhere else, is treated
   as group of paragraphs. The markup for a new paragraph is the subtitle.</P>
 <P>Syntax:</P>
-<P><font face="Courier New, Courier, mono">List [length &lt;value&gt;] [column 
+<P><font face="Courier New, Courier, mono">List [length &lt;value&gt;] [column
   &lt;value&gt;] Subtitle</font><br>
 <font face="Courier New, Courier, mono">list of instructions</font>
   <i><br>
   </i><font face="Courier New, Courier, mono">[ForEmptyList [list of instructions]]<br>
   EndList [Article]</font></P>
-<P>Inside the List, the data context is defined by the constraints applied to 
-  the current article for every processed line. The data context is restored after 
-  the list processing. Here it doesn't function the nextitems an previousitems 
-  in the expected manner, because they refer to the list of article, the most 
-  inner level for publication components. In the same template one can use list 
-  of articles which are treated as lists of paragraphs, so a new option was needed 
+<P>Inside the List, the data context is defined by the constraints applied to
+  the current article for every processed line. The data context is restored after
+  the list processing. Here it doesn't function the nextitems an previousitems
+  in the expected manner, because they refer to the list of article, the most
+  inner level for publication components. In the same template one can use list
+  of articles which are treated as lists of paragraphs, so a new option was needed
   and is called nextsubtitle (and prevsubtitle respectively).</P>
 <P>Constraints:</P>
 <P>The list of forbidden statements inside List Issue:</P>
@@ -1606,11 +1608,14 @@ statements.</span></p>
   parameters are defined.</P>
 <P>Syntax:</P>
 <P><font face="Courier New, Courier, mono">List [length &lt;value&gt;] [column
-  &lt;value&gt;] SearchResult</font><br>
+  &lt;value&gt;] SearchResult [order &lt;order_condition&gt;]</font><br>
 <font face="Courier New, Courier, mono">list of instructions</font>
   <i><br>
   </i><font face="Courier New, Courier, mono">[ForEmptyList [list of instructions]]<br>
   EndList [SearchResult]</font></P>
+<P>where</P>
+<P><font face="Courier New, Courier, mono">&lt;order_condition&gt;=bydate desc|asc<br>
+  |bynumber desc|asc</font></P>
 <P>Inside the List, the data context is defined by the constraints applied to
   the current article for every processed line. The data context is restored after
   the list processing.</P>
