@@ -20,6 +20,9 @@
     - If statements in template language can be negated: If not
     - The parser server updates automatically the article types from the database
     (in case they were modified)
+    - Fixed event notify bug: mailnotify used to send all the emails to the event
+    originator
+    - Order can be used now in Issue, SearchResult and Article lists
 
 2.0.10
     - Fixed the 'Back to article details' bug
